@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - deprecate the needless separated finder options, replaced by a single
+      'finder' option.
 
 0.07      2014-04-16 03:45:17Z
     - line numbers in shipped code are now almost the same (within 3) as
